[package]
name = "tutorial-self"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.6", features = []}
bevy-inspector-egui = "0.9.0"
#bevy = {version = "0.6", features = ["dynamic"]}
